fixed typeform on mobile

--- a/index.css
+++ b/index.css
@@ -147,13 +147,17 @@ img{
   margin-top: 20px;
   transition: margin-top 0.3s linear;
 }
-#projects-content nav, .center{
+#projects-content nav{
   display: block;
   position: relative;
   width: 850px;
   padding-top: 5px;
   padding-bottom: 20px;
   margin: auto;
+}
+.center{
+  width: 36pc;
+  margin: 0 auto;
 }
 #projects-content nav ul {
   display: block;
@@ -264,7 +268,7 @@ img{
 /* Projects Content */
 @media screen and (max-width: 860px) {
 
-    #projects-content nav, .center{
+    #projects-content nav{
         width: 100%;
     }
     #projects-content nav ul li{
